[project]
name = "pix2pix-gan-from-scratch-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=6.30.1",
    "kernel>=0.9.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow>=11.3.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
